# TestProject

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/router/: auth.py  posts.py  users.py  vote.py
migrations/versions/: da8866854ee9_create_post_user_and_votes_table.py
