[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["Ravindra Shinde <ravindra.shinde@siemens.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.98.0"}
psycopg2 = "^2.9.6"
SQLAlchemy = "1.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.11.1"
pylint = "^2.17.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
